--- a/loan_form.html
+++ b/loan_form.html
@@ -17,7 +17,7 @@
 <body>
   <div class="container">
     <div class="text-center mb-3" style="font-size:1.5em; font-weight:700; color:#388e3c; background:linear-gradient(90deg,#e8f5e9 0%,#fffbe7 100%); border-radius:12px; padding:14px 0; box-shadow:0 2px 8px #0002; letter-spacing:1px;">
-      95% Accuracy Tested with 25+ Customers
+      95% Accuracy! Tested with 25+ Customers
     </div>
     <div class="text-center mb-2" style="font-size:1.1em; font-weight:500; color:#1976d2; background:linear-gradient(90deg,#e3f2fd 0%,#fffbe7 100%); border-radius:8px; padding:8px 0; box-shadow:0 1px 4px #0001; letter-spacing:0.5px;">
       ⏱ Takes 2 mins. 🏠 Can save you 2 months of loan processing hassle.
