--- a/loan_form.html
+++ b/loan_form.html
@@ -467,7 +467,7 @@
      
         $('#result').html('<em>Loading...</em>');
         $.ajax({
-          url: 'https://loanpalpoc-production.up.railway.app/full-eligibility',
+          url: 'https://loanpalpoc-1.onrender.com/full-eligibility',
          // url: 'http://127.0.0.1:8000/full-eligibility',
           method: 'POST',
           contentType: 'application/json',
